2020-03-18  Eric Herman <eric@freesa.org>

	API Breaking Change! malloc/free function arguments order swap

	* src/ehht.h: context pointer first
	* src/ehht.c: context pointer first
	* tests/test-ehht.h: argument order
	* configure.ac: 2.0.5-dev -> 2.0.6-dev

2020-02-06  Eric Herman <eric@freesa.org>

	replace copies of libecheck files with git submodule
	parallel-ize "make -j valgrind"

	* .gitmodules: https://github.com/ericherman/libecheck.git
	* submodules/libecheck: add latest libecheck
	* .travis.yml: submodule init
	* Makefile.am: new location of echeck.?, parallel valgrind
	* tests/test-ehht.h: new location of echeck.h
	* configure.ac: 2.0.4-dev -> 2.0.5-dev
	* tests/echeck.c: deleted
	* tests/echeck.h: deleted

2020-02-06  Eric Herman <eric@freesa.org>

	support "./configure --enable-debug"
	Add a bit more to README

	* configure.ac: enable-debug
	* Makefile.am: respect "if DEBUG"
	* README: add --enable-debug to coverage instructions
		also add flyweight, and correct put() syntax

2020-02-04  Eric Herman <eric@freesa.org>

	Added the ability to avoid copying keys on put(). This is not
	typically what makes sense, however there is sometimes a call
	for this. If the keys are mutated while in use in the table,
	results are undefined. If the keys are freed, expect a crash.
	After creation, or when the table is empty, this behavior can
	be set with a call to:

	int ehht_trust_keys_immutable(struct ehht_s *this, int val);

	The ehht_trust_keys_immutable function returns error code of
	zero on success or non-zero on error.

	Clarified that ehht_new_custom error printing functions will
	in the case of NULL, NULL do nothing. If the function is NULL
	and the err_context is non-NULL, the context is assumed to be
	a FILE * (e.g.:stderr).

	* src/ehht.h: comments, ehht_trust_keys_immutable
	* src/ehht.c: ehht_trust_keys_immutable, flush err_context
	* tests/test_flyweight.c: test ehht_trust_keys_immutable
	* tests/test_ehht_resize.c: check error msg printing