@@ -1,3 +1,6 @@
 [submodule "submodules/libecheck"]
 	path = submodules/libecheck
 	url = https://github.com/ericherman/libecheck.git
+[submodule "submodules/context-alloc"]
+	path = submodules/context-alloc
+	url = https://github.com/ericherman/context-alloc.git
