@@ -13,13 +13,13 @@ int test_ehht_clear(void)
 
 	size_t i, count, items_written;
 	size_t report[REPORT_LEN];
-	struct tracking_mem_context ctx;
+	struct oom_injecting_context_s ctx;
 	int err;
 
-	memset(&ctx, 0x00, sizeof(struct tracking_mem_context));
+	memset(&ctx, 0x00, sizeof(struct oom_injecting_context_s));
 	table =
-	    ehht_new_custom(num_buckets, NULL, test_malloc, test_free, &ctx,
-			    NULL, NULL);
+	    ehht_new_custom(num_buckets, NULL, oom_injecting_malloc,
+			    oom_injecting_free, &ctx, NULL, NULL);
 
 	err = 0;
 	table->put(table, "g", 1, "wiz", &err);
